--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 </head>
 <body>
-	<p>Hello world! This is HTML5 Boilerplate.</p>
 	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
