--- a/index.html
+++ b/index.html
@@ -28,30 +28,112 @@
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">SKILLS</a></li>
-					<li><a href="#">PROJECTS</a></li>
 					<li><a href="#">ABOUT</a></li>
+					<li><a href="#skills">SKILLS</a></li>
+					<li><a href="#">PROJECTS</a></li>
 					<li><a href="#">BLOG</a></li>
 					<li><a href="#">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
 			<div id="intro" class="col-lg-4 col-lg-offset-4">
 				<img src="assets/img/profile.jpg" alt="Profile" class="avatar">
 				<h3 id="name">Sudharsanan Muralidharan</h3>
 				<h5 id="caption">Full Stack Web Developer | Android Developer</h5>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-envelope"></i></a>
-				<a href="#"><i class="fa fa-github"></i></a>
-				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<h5 id="location"><i class="fa fa-map-marker"></i> Dallas, TX</h5>
+				<div id="social">
+					<a id="fb-social" href="#" class="social-link"><i class="fa fa-facebook"></i></a>
+					<a id="twitter-social" href="#" class="social-link"><i class="fa fa-twitter"></i></a>
+					<a id="mail-social" href="#" class="social-link"><i class="fa fa-envelope"></i></a>
+					<a id="github-social" href="#" class="social-link"><i class="fa fa-github"></i></a>
+					<a id="linkedin-social" href="#" class="social-link"><i class="fa fa-linkedin"></i></a>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div id="about" class="col-lg-8 col-lg-offset-2">
+				<h4><b>ABOUT</b></h4>
+			</div>
+		</div>
+		<div class="row">
+			<div id="skills" class="col-lg-8 col-lg-offset-2">
+				<h4><b>SKILLS</b></h4><br>
+				<div class="well">
+					<div class="row skill">
+						<div class="col-lg-3">
+							<span class="skillname"><b>Ruby on Rails</b></span>
+						</div>
+						<div class="col-lg-9">
+							<div class="progress">
+								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row skill">
+						<div class="col-lg-3">
+							<span class="skillname"><b>Android</b></span>
+						</div>
+						<div class="col-lg-9">
+							<div class="progress">
+								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row skill">
+						<div class="col-lg-3">
+							<span class="skillname"><b>HTML5, CSS3, SASS</b></span>
+						</div>
+						<div class="col-lg-9">
+							<div class="progress">
+								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row skill">
+						<div class="col-lg-3">
+							<span class="skillname"><b>Javascript &amp; JQuery</b></span>
+						</div>
+						<div class="col-lg-9">
+							<div class="progress">
+								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row skill">
+						<div class="col-lg-3">
+							<span class="skillname"><b>Ember.js</b></span>
+						</div>
+						<div class="col-lg-9">
+							<div class="progress">
+								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row skill">
+						<div class="col-lg-3">
+							<span class="skillname"><b>Bootstrap 3</b></span>
+						</div>
+						<div class="col-lg-9">
+							<div class="progress">
+								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+</div>
+<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
