Update links, add all sections

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">ABOUT</a></li>
+					<li><a href="#about">ABOUT</a></li>
 					<li><a href="#skills">SKILLS</a></li>
-					<li><a href="#">PROJECTS</a></li>
-					<li><a href="#">BLOG</a></li>
-					<li><a href="#">CONTACT</a></li>
+					<li><a href="#projects">PROJECTS</a></li>
+					<li><a href="#blog">BLOG</a></li>
+					<li><a href="#contact">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
@@ -45,20 +45,31 @@
 				<h5 id="caption">Full Stack Web Developer | Android Developer</h5>
 				<h5 id="location"><i class="fa fa-map-marker"></i> Dallas, TX</h5>
 				<div id="social">
-					<a id="fb-social" href="#" class="social-link"><i class="fa fa-facebook"></i></a>
-					<a id="twitter-social" href="#" class="social-link"><i class="fa fa-twitter"></i></a>
-					<a id="mail-social" href="#" class="social-link"><i class="fa fa-envelope"></i></a>
-					<a id="github-social" href="#" class="social-link"><i class="fa fa-github"></i></a>
-					<a id="linkedin-social" href="#" class="social-link"><i class="fa fa-linkedin"></i></a>
+					<a id="fb-social" href="https://www.facebook.com/sudharshan.muralidharan" class="social-link" target="_blank">
+						<i class="fa fa-facebook"></i>
+					</a>
+					<a id="twitter-social" href="https://twitter.com/sudharshan_iyer" class="social-link" target="_blank">
+						<i class="fa fa-twitter"></i>
+					</a>
+					<a id="mail-social" href="mailto:sudhar.ti@gmail.com" class="social-link" target="_blank">
+						<i class="fa fa-envelope"></i>
+					</a>
+					<a id="github-social" href="https://github.com/sudharti" class="social-link" target="_blank">
+						<i class="fa fa-github"></i>
+					</a>
+					<a id="linkedin-social" href="https://www.linkedin.com/in/sudharsananm" class="social-link" target="_blank">
+						<i class="fa fa-linkedin"></i>
+					</a>
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row section">
 			<div id="about" class="col-lg-8 col-lg-offset-2">
 				<h4><b>ABOUT</b></h4>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row section">
 			<div id="skills" class="col-lg-8 col-lg-offset-2">
 				<h4><b>SKILLS</b></h4><br>
 				<div class="well">
@@ -131,9 +142,23 @@
 				</div>
 			</div>
 		</div>
+		<div class="row section">
+			<div id="projects" class="col-lg-8 col-lg-offset-2">
+				<h4><b>PROJECTS</b></h4>
+			</div>
+		</div>
+		<div class="row section">
+			<div id="blog" class="col-lg-8 col-lg-offset-2">
+				<h4><b>BLOG</b></h4>
+			</div>
+		</div>
+		<div class="row section">
+			<div id="contact" class="col-lg-8 col-lg-offset-2">
+				<h4><b>CONTACT</b></h4>
+			</div>
+		</div>
 	</div>
-</div>
-<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
