--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">PORTFOLIO</a>
+				<a class="navbar-brand" href>PORTFOLIO</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#about">ABOUT</a></li>
-					<li><a href="#skills">SKILLS</a></li>
-					<li><a href="#projects">PROJECTS</a></li>
-					<li><a href="#blog">BLOG</a></li>
-					<li><a href="#contact">CONTACT</a></li>
+					<li><a class="scroll-link" href="#about">ABOUT</a></li>
+					<li><a class="scroll-link" href="#skills">SKILLS</a></li>
+					<li><a class="scroll-link" href="#projects">PROJECTS</a></li>
+					<li><a class="scroll-link" href="#blog">BLOG</a></li>
+					<li><a class="scroll-link" href="#contact">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
@@ -160,5 +160,6 @@
 	</div>
 	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/util.js"></script>
 </body>
 </html>
