Change progressbar colors

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								<div class="progress-bar progress-bar-rails" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
 								</div>
 							</div>
 						</div>
@@ -90,7 +90,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+								<div class="progress-bar progress-bar-android" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
 								</div>
 							</div>
 						</div>
@@ -101,7 +101,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								<div class="progress-bar progress-bar-html-css" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
 								</div>
 							</div>
 						</div>
@@ -112,7 +112,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+								<div class="progress-bar progress-bar-js" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
 								</div>
 							</div>
 						</div>
@@ -123,7 +123,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+								<div class="progress-bar progress-bar-ember" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
 								</div>
 							</div>
 						</div>
@@ -134,7 +134,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								<div class="progress-bar progress-bar-bootstrap" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
 								</div>
 							</div>
 						</div>
@@ -145,6 +145,11 @@
 		<div class="row section">
 			<div id="projects" class="col-lg-8 col-lg-offset-2">
 				<h4><b>PROJECTS</b></h4>
+				<a href="#">Twitter Clone</a><br>
+				<a href="#">Two Cents</a><br>
+				<a href="#">Barrel Race Android Game</a><br>
+				<a href="#">Slider Panel</a><br>
+				<a href="#">Paper Bootstrap Theme</a>
 			</div>
 		</div>
 		<div class="row section">
