--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<a id="twitter-social" href="https://twitter.com/sudharshan_iyer" class="social-link" target="_blank">
 						<i class="fa fa-twitter"></i>
 					</a>
-					<a id="mail-social" href="mailto:sudhar.ti@gmail.com" class="social-link" target="_blank">
-						<i class="fa fa-envelope"></i>
+					<a id="google-social" href="https://plus.google.com/u/0/+SudharshanMuralidharan" class="social-link" target="_blank">
+						<i class="fa fa-google-plus"></i>
 					</a>
 					<a id="github-social" href="https://github.com/sudharti" class="social-link" target="_blank">
 						<i class="fa fa-github"></i>
@@ -65,13 +65,15 @@
 		</div>
 		<div class="row section">
 			<div id="about" class="col-lg-8 col-lg-offset-2">
-				<h4><b>ABOUT</b></h4>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>
+				<h3 class="text-center"><b>ABOUT</b></h3><br>
+				<p>Hi, I am Sudharsanan hailing from Chennai, India. I'm currently a Graduate student majoring in Computer Science at University of Texas at Dallas.</p>
+				<p>Full Stack Ruby on Rails Developer</p>
+				<p>Android Developer</p>
 			</div>
 		</div>
 		<div class="row section">
 			<div id="skills" class="col-lg-8 col-lg-offset-2">
-				<h4><b>SKILLS</b></h4><br>
+				<h3 class="text-center"><b>SKILLS</b></h3><br>
 				<div class="well">
 					<div class="row skill">
 						<div class="col-lg-3">
@@ -79,7 +81,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-rails" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								<div class="progress-bar progress-bar-rails" data-transitiongoal="85">
 								</div>
 							</div>
 						</div>
@@ -90,7 +92,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-android" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+								<div class="progress-bar progress-bar-android" data-transitiongoal="80">
 								</div>
 							</div>
 						</div>
@@ -101,7 +103,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-html-css" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								<div class="progress-bar progress-bar-html-css" data-transitiongoal="85">
 								</div>
 							</div>
 						</div>
@@ -112,7 +114,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-js" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+								<div class="progress-bar progress-bar-js" data-transitiongoal="78">
 								</div>
 							</div>
 						</div>
@@ -123,7 +125,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-ember" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+								<div class="progress-bar progress-bar-ember" data-transitiongoal="70">
 								</div>
 							</div>
 						</div>
@@ -134,7 +136,7 @@
 						</div>
 						<div class="col-lg-9">
 							<div class="progress">
-								<div class="progress-bar progress-bar-bootstrap" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+								<div class="progress-bar progress-bar-bootstrap" data-transitiongoal="82">
 								</div>
 							</div>
 						</div>
@@ -144,27 +146,62 @@
 		</div>
 		<div class="row section">
 			<div id="projects" class="col-lg-8 col-lg-offset-2">
-				<h4><b>PROJECTS</b></h4>
-				<a href="#">Twitter Clone</a><br>
-				<a href="#">Two Cents</a><br>
-				<a href="#">Barrel Race Android Game</a><br>
-				<a href="#">Slider Panel</a><br>
-				<a href="#">Paper Bootstrap Theme</a>
+				<h3 class="text-center"><b>PROJECTS</b></h3><br>
+				<div class="well">
+					<div class="project">
+						<h5><i class="fa fa-github"></i> Twitter Clone </h5>
+						<p>An Open Source clone of Twitter using Ruby on Rails. This is not an exact copy of Twitter but has a similar functionality. This is to demonstrate how easy is it develop to a Social networking app using Ruby on Rails.</p>
+						<span class="label label-danger">Ruby on Rails</span>
+					</div><hr>
+					<div class="project">
+						<h5><i class="fa fa-github"></i> Two Cents</h5>
+						<p>An app that would help the users find the best things from their neighborhood like the best food, best place to get milk, best place to hangout on a Friday evening and the likes. The target user of this application is everybody who wants to know the tips and tricks of their neighborhood. This app will especially be helpful for people moving to a new location by showing the tips for that location which have been posted by the people of that locality.</p>
+						<span class="label label-danger">Ruby on Rails</span>
+					</div><hr>
+					<div class="project">
+						<h5><i class="fa fa-github"></i> Slider Panel</h5>
+						<p>A simple sliding panel to display off-canvas contents. The panel pushes the exiting body content to the specified direction and smoothly transitions into the view area. This plugin uses css transforms (translate3d) and cubic bezier transitions to achieve the sliding effect.</p>
+						<span class="label label-warning">Coffeescript + Sass</span>
+					</div><hr>
+					<div class="project">
+						<h5><i class="fa fa-github"></i> paper - Bootstrap Theme</h5>
+						<p>Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on Github. Paper is built on Twitter Bootstrap and written using Sass.</p>
+						<span class="label label-primary">Javascript + Sass</span>
+					</div><hr>
+					<div class="project">
+						<h5><i class="fa fa-github"></i> Barrel Race Android</h5>
+						<p>BarrelRace Game is a Rodeo event where there is a rider on a horse who enters a gate and circles the barrels (3 Barrels in this case). There is a clock which starts when the rider enters the gate and runs until the rider circles all the barrels.</p>
+						<span class="label label-success">Android</span>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row section">
 			<div id="blog" class="col-lg-8 col-lg-offset-2">
-				<h4><b>BLOG</b></h4>
+				<h3 class="text-center"><b>BLOG</b></h3>
+				<p>
+					I use Jekyll with Minimal Mistakes and Github to host my blog. I write about Ruby, Rails, Javascript and Android.
+				</p>
+				<p>
+					<a href="http://sudharti.github.io/">http://sudharti.github.io/</a>
+				</p>
 			</div>
 		</div>
 		<div class="row section">
-			<div id="contact" class="col-lg-8 col-lg-offset-2">
-				<h4><b>CONTACT</b></h4>
+			<div id="contact" class="col-lg-8 col-lg-offset-2 text-center">
+				<h3><b>CONTACT</b></h3>
+				<a id="phone" href="#contact" class="social-link">
+					<i class="fa fa-phone"></i>
+				</a>
+				<a id="mail" href="mailto:sudhar.ti@gmail.com" class="social-link">
+					<i class="fa fa-envelope"></i>
+				</a>
 			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap-progressbar.min.js"></script>
 	<script type="text/javascript" src="js/util.js"></script>
 </body>
 </html>
