Changes to page

--- a/index.html
+++ b/index.html
@@ -132,6 +132,17 @@
           </div>
           <div class="row skill">
             <div class="col-lg-3">
+              <span class="skillname"><b>Java</b></span>
+            </div>
+            <div class="col-lg-9">
+              <div class="progress">
+                <div class="progress-bar progress-bar-java" data-transitiongoal="87">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row skill">
+            <div class="col-lg-3">
               <span class="skillname"><b>Bootstrap 3</b></span>
             </div>
             <div class="col-lg-9">
@@ -149,29 +160,76 @@
         <h3 class="text-center"><b>PROJECTS</b></h3><br>
         <div class="well">
           <div class="project">
-            <h5><i class="fa fa-github"></i> Twitter Clone </h5>
+            <h5>Twitter Clone </h5>
             <p>An Open Source clone of Twitter using Ruby on Rails. This is not an exact copy of Twitter but has a similar functionality. This is to demonstrate how easy is it develop to a Social networking app using Ruby on Rails.</p>
-            <span class="label label-danger">Ruby on Rails</span>
+            <span class="label label-rails">Ruby on Rails</span>
+            <span class="label label-html">HTML5</span>
+            <span class="label label-css">CSS3 &amp; Sass</span>
+            <span class="label label-bootstrap">Bootstrap3</span>
+            <span class="label label-js">JQuery</span>
+            <span class="label label-heroku">Heroku</span>
+            <br><br>
+            <a href="https://github.com/sudharti/twitter-clone" class="btn btn-default btn-github">
+              <i class="fa fa-github"></i> Source on Github
+            </a>
+            <a href="http://twitter-clone-rails.herokuapp.com" class="btn btn-default btn-github">
+              View Demo
+            </a>
           </div><hr>
           <div class="project">
-            <h5><i class="fa fa-github"></i> Two Cents</h5>
+            <h5>Two Cents</h5>
             <p>An app that would help the users find the best things from their neighborhood like the best food, best place to get milk, best place to hangout on a Friday evening and the likes. The target user of this application is everybody who wants to know the tips and tricks of their neighborhood. This app will especially be helpful for people moving to a new location by showing the tips for that location which have been posted by the people of that locality.</p>
-            <span class="label label-danger">Ruby on Rails</span>
+            <span class="label label-rails">Ruby on Rails</span>
+            <span class="label label-html">HTML5</span>
+            <span class="label label-css">CSS3 &amp; Sass</span>
+            <span class="label label-bootstrap">Bootstrap3</span>
+            <span class="label label-js">JQuery</span>
+            <span class="label label-heroku">Heroku</span>
+            <br><br>
+            <a href="https://github.com/sudharti/2cents" class="btn btn-default btn-github">
+              <i class="fa fa-github"></i> Source on Github
+            </a>
+            <a href="https://two-cents-hack.herokuapp.com" class="btn btn-default btn-github">
+              View Demo
+            </a>
           </div><hr>
           <div class="project">
             <h5><i class="fa fa-github"></i> Slider Panel</h5>
             <p>A simple sliding panel to display off-canvas contents. The panel pushes the exiting body content to the specified direction and smoothly transitions into the view area. This plugin uses css transforms (translate3d) and cubic bezier transitions to achieve the sliding effect.</p>
-            <span class="label label-warning">Coffeescript + Sass</span>
+            <span class="label label-js">CoffeeScript</span>
+            <span class="label label-css">Sass</span>
+            <span class="label label-html">HTML5</span>
+            <br><br>
+            <a href="https://github.com/sudharti/slider-panel" class="btn btn-default btn-github">
+              <i class="fa fa-github"></i> Source on Github
+            </a>
+            <a href="http://sudharti.github.io/slider-panel" class="btn btn-default btn-github">
+              View Demo
+            </a>
           </div><hr>
           <div class="project">
             <h5><i class="fa fa-github"></i> paper - Bootstrap Theme</h5>
             <p>Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on Github. Paper is built on Twitter Bootstrap and written using Sass.</p>
-            <span class="label label-primary">Javascript + Sass</span>
+            <span class="label label-html">HTML5</span>
+            <span class="label label-css">Sass</span>
+            <span class="label label-js">Javascript + JQuery</span>
+            <br><br>
+            <a href="https://github.com/sudharti/paper" class="btn btn-default btn-github">
+              <i class="fa fa-github"></i> Source on Github
+            </a>
+            <a href="http://sudharti.github.io/paper" class="btn btn-default btn-github">
+              View Demo
+            </a>
           </div><hr>
           <div class="project">
             <h5><i class="fa fa-github"></i> Barrel Race Android</h5>
             <p>BarrelRace Game is a Rodeo event where there is a rider on a horse who enters a gate and circles the barrels (3 Barrels in this case). There is a clock which starts when the rider enters the gate and runs until the rider circles all the barrels.</p>
-            <span class="label label-success">Android</span>
+            <span class="label label-android">Android</span>
+            <span class="label label-java">Java</span>
+            <br><br>
+            <a href="https://github.com/sudharti/BarrelRace" class="btn btn-default btn-github">
+              <i class="fa fa-github"></i> Source on Github
+            </a>
           </div>
         </div>
       </div>
@@ -183,18 +241,33 @@
           I use Jekyll with Minimal Mistakes and Github to host my blog. I write about Ruby, Rails, Javascript and Android.
         </p>
         <p>
-          <a href="http://sudharti.github.io/">http://sudharti.github.io/</a>
+          Check out my blog at <a href="http://sudharti.github.io/">http://sudharti.github.io/</a>
         </p>
       </div>
     </div>
     <div class="row section">
       <div id="contact" class="col-lg-8 col-lg-offset-2 text-center">
         <h3><b>CONTACT</b></h3>
-        <a id="phone" href="#contact" class="social-link">
+        <a id="phone" href="javascript:void(0);" class="social-link" data-toggle="popover" title="Phone" data-content="Reach me anytime at (469)-789-9579" data-placement="top">
           <i class="fa fa-phone"></i>
         </a>
         <a id="mail" href="mailto:sudhar.ti@gmail.com" class="social-link">
           <i class="fa fa-envelope"></i>
+        </a>
+        <a id="fb-social" href="https://www.facebook.com/sudharshan.muralidharan" class="social-link" target="_blank">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a id="twitter-social" href="https://twitter.com/sudharshan_iyer" class="social-link" target="_blank">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a id="google-social" href="https://plus.google.com/u/0/+SudharshanMuralidharan" class="social-link" target="_blank">
+          <i class="fa fa-google-plus"></i>
+        </a>
+        <a id="github-social" href="https://github.com/sudharti" class="social-link" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+        <a id="linkedin-social" href="https://www.linkedin.com/in/sudharsananm" class="social-link" target="_blank">
+          <i class="fa fa-linkedin"></i>
         </a>
       </div>
     </div>
