--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a class="scroll-link" href="#about">ABOUT</a></li>
           <li><a class="scroll-link" href="#skills">SKILLS</a></li>
           <li><a class="scroll-link" href="#projects">PROJECTS</a></li>
+          <li><a href="assets/docs/Resume.pdf" target="_blank">RESUME</a></li>
           <li><a class="scroll-link" href="#blog">BLOG</a></li>
           <li><a class="scroll-link" href="#contact">CONTACT</a></li>
         </ul>
@@ -61,14 +62,16 @@
             <i class="fa fa-linkedin"></i>
           </a>
         </div>
+        <br>
       </div>
     </div>
     <div class="row section">
       <div id="about" class="col-lg-8 col-lg-offset-2">
         <h3 class="text-center"><b>ABOUT</b></h3><br>
-        <p>Hi, I am Sudharsanan hailing from Chennai, India. I'm currently a Graduate student majoring in Computer Science at University of Texas at Dallas.</p>
-        <p>Full Stack Ruby on Rails Developer</p>
-        <p>Android Developer</p>
+        <p>Hey there! I am Sudharsanan.</p>
+        <p>From Chennai, India. Currently pursuing my Masters degree in Computer Science at University of Texas, Dallas. I completed my Bachelor of Technology in Computer Science at SASTRA University, India.</p>
+        <p>A Full Stack Ruby on Rails developer who is passionate towards the web.</p>
+        <p>Also Interested in Android Application development.</p>
       </div>
     </div>
     <div class="row section">
@@ -162,12 +165,20 @@
           <div class="project">
             <h5>Twitter Clone </h5>
             <p>An Open Source clone of Twitter using Ruby on Rails. This is not an exact copy of Twitter but has a similar functionality. This is to demonstrate how easy is it develop to a Social networking app using Ruby on Rails.</p>
-            <span class="label label-rails">Ruby on Rails</span>
-            <span class="label label-html">HTML5</span>
-            <span class="label label-css">CSS3 &amp; Sass</span>
-            <span class="label label-bootstrap">Bootstrap3</span>
-            <span class="label label-js">JQuery</span>
-            <span class="label label-heroku">Heroku</span>
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="t-left-section">
+                  <span class="label label-rails">Ruby on Rails</span>
+                  <span class="label label-html">HTML5</span>
+                  <span class="label label-css">CSS3 &amp; Sass</span>
+                </div>
+                <div class="t-right-section">
+                  <span class="label label-bootstrap">Bootstrap3</span>
+                  <span class="label label-js">JQuery</span>
+                  <span class="label label-heroku">Heroku</span>
+                </div>
+              </div>
+            </div>
             <br><br>
             <a href="https://github.com/sudharti/twitter-clone" class="btn btn-default btn-github">
               <i class="fa fa-github"></i> Source on Github
@@ -179,12 +190,20 @@
           <div class="project">
             <h5>Two Cents</h5>
             <p>An app that would help the users find the best things from their neighborhood like the best food, best place to get milk, best place to hangout on a Friday evening and the likes. The target user of this application is everybody who wants to know the tips and tricks of their neighborhood. This app will especially be helpful for people moving to a new location by showing the tips for that location which have been posted by the people of that locality.</p>
-            <span class="label label-rails">Ruby on Rails</span>
-            <span class="label label-html">HTML5</span>
-            <span class="label label-css">CSS3 &amp; Sass</span>
-            <span class="label label-bootstrap">Bootstrap3</span>
-            <span class="label label-js">JQuery</span>
-            <span class="label label-heroku">Heroku</span>
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="t-left-section">
+                  <span class="label label-rails">Ruby on Rails</span>
+                  <span class="label label-html">HTML5</span>
+                  <span class="label label-css">CSS3 &amp; Sass</span>      
+                </div>
+                <div class="t-right-section">
+                  <span class="label label-bootstrap">Bootstrap3</span>
+                  <span class="label label-js">JQuery</span>
+                  <span class="label label-heroku">Heroku</span>
+                </div>
+              </div>
+            </div>
             <br><br>
             <a href="https://github.com/sudharti/2cents" class="btn btn-default btn-github">
               <i class="fa fa-github"></i> Source on Github
