--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
             </div>
             <br><br>
             <a href="https://github.com/sudharti/twitter-clone" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Source on Github
+              <i class="fa fa-github"></i> Github
             </a>
             <a href="http://twitter-clone-rails.herokuapp.com" class="btn btn-default btn-github">
-              View Demo
+              Demo <i class="fa fa-arrow-right"></i>
             </a>
           </div><hr>
           <div class="project">
@@ -206,10 +206,10 @@
             </div>
             <br><br>
             <a href="https://github.com/sudharti/2cents" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Source on Github
+              <i class="fa fa-github"></i> Github
             </a>
             <a href="https://two-cents-hack.herokuapp.com" class="btn btn-default btn-github">
-              View Demo
+              Demo <i class="fa fa-arrow-right"></i>
             </a>
           </div><hr>
           <div class="project">
@@ -220,24 +220,24 @@
             <span class="label label-html">HTML5</span>
             <br><br>
             <a href="https://github.com/sudharti/slider-panel" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Source on Github
+              <i class="fa fa-github"></i> Github
             </a>
             <a href="http://sudharti.github.io/slider-panel" class="btn btn-default btn-github">
-              View Demo
+              Demo <i class="fa fa-arrow-right"></i>
             </a>
           </div><hr>
           <div class="project">
             <h5><i class="fa fa-github"></i> paper - Bootstrap Theme</h5>
-            <p>Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the source on Github. Paper is built on Twitter Bootstrap and written using Sass.</p>
+            <p>Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the Github. Paper is built on Twitter Bootstrap and written using Sass.</p>
             <span class="label label-html">HTML5</span>
             <span class="label label-css">Sass</span>
             <span class="label label-js">Javascript + JQuery</span>
             <br><br>
             <a href="https://github.com/sudharti/paper" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Source on Github
+              <i class="fa fa-github"></i> Github
             </a>
             <a href="http://sudharti.github.io/paper" class="btn btn-default btn-github">
-              View Demo
+              Demo <i class="fa fa-arrow-right"></i>
             </a>
           </div><hr>
           <div class="project">
@@ -247,7 +247,7 @@
             <span class="label label-java">Java</span>
             <br><br>
             <a href="https://github.com/sudharti/BarrelRace" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Source on Github
+              <i class="fa fa-github"></i> Github
             </a>
           </div>
         </div>
