--- a/index.html
+++ b/index.html
@@ -66,12 +66,18 @@
       </div>
     </div>
     <div class="row section">
-      <div id="about" class="col-lg-8 col-lg-offset-2">
+      <div id="about" class="col-lg-6 col-lg-offset-3">
         <h3 class="text-center"><b>ABOUT</b></h3><br>
-        <p>Hey there! I am Sudharsanan.</p>
-        <p>From Chennai, India. Currently pursuing my Masters degree in Computer Science at University of Texas, Dallas. I completed my Bachelor of Technology in Computer Science at SASTRA University, India.</p>
-        <p>A Full Stack Ruby on Rails developer who is passionate towards the web.</p>
-        <p>Also Interested in Android Application development.</p>
+        <h4>Introduction</h4>
+        <p>Hey there. I am Sudharsanan, 22 from India. Currently a Graduate student in Computer Science at University of Texas, Dallas. A Rubyist, Hacker, Blogger and a Technophile. Check out my Skills in the section below.
+        <h4>Web Development</h4>
+        <p>I am a Full stack web developer who is totally passionate about the web. I use Ruby on Rails &amp; Ember.js to create web applications.</p>
+        <h4>UI/UX Design</h4>
+        <p>I love creating simple, flat and elegant interfaces for the Web and Mobile. For designing web applications I use Twitter Bootstrap(Predominantly) and Zurb Foundation. I have also designed some themes built on Bootstrap.</p>
+        <h4>Mobile Development</h4>
+        <p>Apart from Web development I develop applications for Android. I have 1+ years experience in Mobile App development.</p>
+        <h4>Open Source</h4>
+        <p>I am a strong supporter of open source software. I believe that software should be built by an open community of developers, hackers and designers.</p>
       </div>
     </div>
     <div class="row section">
@@ -161,94 +167,82 @@
     <div class="row section">
       <div id="projects" class="col-lg-8 col-lg-offset-2">
         <h3 class="text-center"><b>PROJECTS</b></h3><br>
-        <div class="well">
-          <div class="project">
-            <h5>Twitter Clone </h5>
-            <p>An Open Source clone of Twitter using Ruby on Rails. This is not an exact copy of Twitter but has a similar functionality. This is to demonstrate how easy is it develop to a Social networking app using Ruby on Rails.</p>
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="t-left-section">
-                  <span class="label label-rails">Ruby on Rails</span>
-                  <span class="label label-html">HTML5</span>
-                  <span class="label label-css">CSS3 &amp; Sass</span>
-                </div>
-                <div class="t-right-section">
-                  <span class="label label-bootstrap">Bootstrap3</span>
-                  <span class="label label-js">JQuery</span>
-                  <span class="label label-heroku">Heroku</span>
-                </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="rails head">
+                <img src="assets/img/rails-128.png" alt="rails">
+              </div>
+              <div class="content">
+                <h5 class="tech">Ruby on Rails</h5>
+                <h5 class="title">Twitter Clone</h5>
+                <p>An Open Source clone of Twitter developed using Ruby on Rails 4</p>
               </div>
             </div>
-            <br><br>
-            <a href="https://github.com/sudharti/twitter-clone" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Github
-            </a>
-            <a href="http://twitter-clone-rails.herokuapp.com" class="btn btn-default btn-github">
-              Demo <i class="fa fa-arrow-right"></i>
-            </a>
-          </div><hr>
-          <div class="project">
-            <h5>Two Cents</h5>
-            <p>An app that would help the users find the best things from their neighborhood like the best food, best place to get milk, best place to hangout on a Friday evening and the likes. The target user of this application is everybody who wants to know the tips and tricks of their neighborhood. This app will especially be helpful for people moving to a new location by showing the tips for that location which have been posted by the people of that locality.</p>
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="t-left-section">
-                  <span class="label label-rails">Ruby on Rails</span>
-                  <span class="label label-html">HTML5</span>
-                  <span class="label label-css">CSS3 &amp; Sass</span>      
-                </div>
-                <div class="t-right-section">
-                  <span class="label label-bootstrap">Bootstrap3</span>
-                  <span class="label label-js">JQuery</span>
-                  <span class="label label-heroku">Heroku</span>
-                </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="head css">
+                <img src="assets/img/css3-128.png" alt="css">
+              </div>
+              <div class="content">
+                <h5 class="tech">Sass + JQuery</h5>
+                <h5 class="title">Paper - Bootstrap Theme</h5>
+                <p>Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the Github. Paper is built on Twitter Bootstrap and written using Sass.</p>
               </div>
             </div>
-            <br><br>
-            <a href="https://github.com/sudharti/2cents" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Github
-            </a>
-            <a href="https://two-cents-hack.herokuapp.com" class="btn btn-default btn-github">
-              Demo <i class="fa fa-arrow-right"></i>
-            </a>
-          </div><hr>
-          <div class="project">
-            <h5><i class="fa fa-github"></i> Slider Panel</h5>
-            <p>A simple sliding panel to display off-canvas contents. The panel pushes the exiting body content to the specified direction and smoothly transitions into the view area. This plugin uses css transforms (translate3d) and cubic bezier transitions to achieve the sliding effect.</p>
-            <span class="label label-js">CoffeeScript</span>
-            <span class="label label-css">Sass</span>
-            <span class="label label-html">HTML5</span>
-            <br><br>
-            <a href="https://github.com/sudharti/slider-panel" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Github
-            </a>
-            <a href="http://sudharti.github.io/slider-panel" class="btn btn-default btn-github">
-              Demo <i class="fa fa-arrow-right"></i>
-            </a>
-          </div><hr>
-          <div class="project">
-            <h5><i class="fa fa-github"></i> paper - Bootstrap Theme</h5>
-            <p>Paper is a simple, elegant &amp; flat Bootstrap Theme. It's free to use and open source. Checkout the Github. Paper is built on Twitter Bootstrap and written using Sass.</p>
-            <span class="label label-html">HTML5</span>
-            <span class="label label-css">Sass</span>
-            <span class="label label-js">Javascript + JQuery</span>
-            <br><br>
-            <a href="https://github.com/sudharti/paper" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Github
-            </a>
-            <a href="http://sudharti.github.io/paper" class="btn btn-default btn-github">
-              Demo <i class="fa fa-arrow-right"></i>
-            </a>
-          </div><hr>
-          <div class="project">
-            <h5><i class="fa fa-github"></i> Barrel Race Android</h5>
-            <p>BarrelRace Game is a Rodeo event where there is a rider on a horse who enters a gate and circles the barrels (3 Barrels in this case). There is a clock which starts when the rider enters the gate and runs until the rider circles all the barrels.</p>
-            <span class="label label-android">Android</span>
-            <span class="label label-java">Java</span>
-            <br><br>
-            <a href="https://github.com/sudharti/BarrelRace" class="btn btn-default btn-github">
-              <i class="fa fa-github"></i> Github
-            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="head js">
+                <img src="assets/img/js-128.png" alt="javascript">
+              </div>
+              <div class="content">
+                <h5 class="tech">Jquery + CSS3</h5>
+                <h5 class="title">Slider panel</h5>
+                <p>A simple sliding panel to display off-canvas contents. It uses css transforms (translate3d) and cubic bezier transitions to achieve the sliding effect.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="rails head">
+                <img src="assets/img/rails-128.png" alt="rails">
+              </div>
+              <div class="content">
+                <h5 class="tech">Ruby on Rails</h5>
+                <h5 class="title">Two Cents</h5>
+                <p>An app that would help the users find the best things from their neighborhood like the best food, best place to get milk, best place to hangout on a Friday evening and the likes.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="android head">
+                <img src="assets/img/android-128.png" alt="rails">
+              </div>
+              <div class="content">
+                <h5 class="tech">Android</h5>
+                <h5 class="title">Barrel Race Game</h5>
+                <p>BarrelRace Game is an android game where there is a rider on a horse who enters a gate and circles the barrels (3 Barrels in this case).</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <div class="html head">
+                <img src="assets/img/html5-128.png" alt="rails">
+              </div>
+              <div class="content">
+                <h5 class="tech">HTML5 + CSS3 + JQuery</h5>
+                <h5 class="title">Portfolio</h5>
+                <p>A portfolio of my Side projects.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -257,10 +251,7 @@
       <div id="blog" class="col-lg-8 col-lg-offset-2">
         <h3 class="text-center"><b>BLOG</b></h3>
         <p>
-          I use Jekyll with Minimal Mistakes and Github to host my blog. I write about Ruby, Rails, Javascript and Android.
-        </p>
-        <p>
-          Check out my blog at <a href="http://sudharti.github.io/">http://sudharti.github.io/</a>
+         I am a part-time Blogger. I blog about Ruby, Rails &amp; Android. Check out my blog at <a href="http://sudharti.github.io/">http://sudharti.github.io/</a>
         </p>
       </div>
     </div>
