--- a/index.html
+++ b/index.html
@@ -161,6 +161,17 @@
               </div>
             </div>
           </div>
+          <div class="row skill">
+            <div class="col-lg-3">
+              <span class="skillname"><b>Git</b></span>
+            </div>
+            <div class="col-lg-9">
+              <div class="progress">
+                <div class="progress-bar progress-bar-git" data-transitiongoal="85">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
