Add Github links to projects

--- a/index.html
+++ b/index.html
@@ -183,18 +183,24 @@
             <div class="card">
               <div class="rails head">
                 <img src="assets/img/rails-128.png" alt="rails">
+                <a href="https://github.com/sudharti/twitter-clone" class="github pull-right">
+                  <i class="fa fa-github"></i> GitHub
+                </a>
               </div>
               <div class="content">
                 <h5 class="tech">Ruby on Rails</h5>
                 <h5 class="title">Twitter Clone</h5>
-                <p>An Open Source clone of Twitter developed using Ruby on Rails 4</p>
+                <p>An Open Source clone of Twitter developed using Ruby on Rails 4. It uses Postgresql for database and Bootstrap for frontend.</p>
               </div>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="card">
               <div class="head css">
-                <img src="assets/img/css3-128.png" alt="css">
+                <img src="assets/img/css3-128.png" alt="css3">
+                <a href="https://github.com/sudharti/paper" class="github pull-right">
+                  <i class="fa fa-github"></i> GitHub
+                </a>
               </div>
               <div class="content">
                 <h5 class="tech">Sass + JQuery</h5>
@@ -209,6 +215,9 @@
             <div class="card">
               <div class="head js">
                 <img src="assets/img/js-128.png" alt="javascript">
+                <a href="https://github.com/sudharti/slider-panel" class="github pull-right">
+                  <i class="fa fa-github"></i> GitHub
+                </a>
               </div>
               <div class="content">
                 <h5 class="tech">Jquery + CSS3</h5>
@@ -221,11 +230,14 @@
             <div class="card">
               <div class="rails head">
                 <img src="assets/img/rails-128.png" alt="rails">
+                <a href="https://github.com/sudharti/2cents" class="github pull-right">
+                  <i class="fa fa-github"></i> GitHub
+                </a>
               </div>
               <div class="content">
                 <h5 class="tech">Ruby on Rails</h5>
                 <h5 class="title">Two Cents</h5>
-                <p>An app that would help the users find the best things from their neighborhood like the best food, best place to get milk, best place to hangout on a Friday evening and the likes.</p>
+                <p>An app that would help the users find the best things from their neighborhood. Built using Ruby on Rails, Bootstrap and Postgresql.</p>
               </div>
             </div>
           </div>
@@ -234,7 +246,10 @@
           <div class="col-lg-6">
             <div class="card">
               <div class="android head">
-                <img src="assets/img/android-128.png" alt="rails">
+                <img src="assets/img/android-128.png" alt="android">
+                <a href="https://github.com/sudharti/BarrelRace" class="github pull-right">
+                  <i class="fa fa-github"></i> GitHub
+                </a>
               </div>
               <div class="content">
                 <h5 class="tech">Android</h5>
@@ -246,12 +261,15 @@
           <div class="col-lg-6">
             <div class="card">
               <div class="html head">
-                <img src="assets/img/html5-128.png" alt="rails">
+                <img src="assets/img/html5-128.png" alt="html5">
+                <a href="https://github.com/sudharti/portfolio" class="github pull-right">
+                  <i class="fa fa-github"></i> GitHub
+                </a>
               </div>
               <div class="content">
                 <h5 class="tech">HTML5 + CSS3 + JQuery</h5>
                 <h5 class="title">Portfolio</h5>
-                <p>A portfolio of my Side projects.</p>
+                <p>An Introduction about myself and showcase of my Skills &amp; Projects. Developed using HTML5, CSS3, JQuery and Bootstrap.</p>
               </div>
             </div>
           </div>
